[package]
authors = ["Juliette Cordor <professional@maybejules.com>"]
categories = ["api-bindings", "command-line-utilities", "config"]
description = "A Rust based abstraction layer for Scoop"
edition = "2021"
homepage = "https://github.com/winpax/sprinkles"
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "benches/**/*",
]
keywords = ["api", "scoop", "windows", "package", "manager"]
license = "MIT OR Apache-2.0"
name = "sprinkles-rs"
repository = "https://github.com/winpax/sprinkles"
rust-version = "1.75.0"
version = "0.16.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sprinkles"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = [
    "beta",
    "vendored-libgit2",
    "vendored-native-tls",
    "vendored-openssl",
]
rustc-args = ["--cfg", "docsrs", "--cfg", "reqwest_unstable"]

[features]
beta = []
default = ["manifest-hashes", "rayon"]
manifest-hashes = [
    "base64",
    "digest",
    "getset",
    "quick-xml",
    "serde_json_path",
    "sha1",
    "sha2",
    "sxd-document",
    "sxd-xpath",
    "tokio-util",
    "url",
    "urlencoding",
    "tokio/fs",
]
parking_lot = ["tokio/parking_lot"]
rayon = ["dep:rayon", "blake3/rayon", "indicatif/rayon"]
rustls-tls = [
    "gix/blocking-http-transport-reqwest-rust-tls",
    "reqwest/rustls-tls",
]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
v1 = []
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-native-tls = [
    "gix/blocking-http-transport-reqwest-native-tls",
    "reqwest/native-tls-vendored",
]
vendored-openssl = ["git2/vendored-openssl"]
zlib-ng = ["gix/zlib-ng"]
zlib-ng-compat = ["git2/zlib-ng-compat", "gix/zlib-ng-compat"]
zlib-stock = ["gix/zlib-stock"]

[[bench]]
harness = false
name = "hashing"

[dependencies]
base64 = { version = "0.22", optional = true }
blake3 = "1.5"
bytes = "1.6"
cfg-if = "1.0"
chrono = { version = "0.4", features = [
    "clock",
    "serde",
    "std",
], default-features = false }
clap = { version = "4.5", optional = true }
const_format = "0.2"
derive_more = "0.99"
digest = { version = "0.10", features = ["std"], optional = true }
directories = "5.0"
dunce = "1.0"
futures = "0.3"
getset = { version = "0.1", optional = true }
gix = { version = "0.63", features = [
    "blocking-http-transport-reqwest",
    "blocking-network-client",
    "worktree-mutation",
] }
gix-object = "0.42"
indicatif = { version = "0.17", features = ["improved_unicode", "tokio"] }
itertools = "0.13"
log = "0.4"
md-5 = "0.10"
phf = { version = "0.11", default-features = false }
quick-xml = { version = "0.32", optional = true, features = ["serialize"] }
quork = "0.7"
rayon = { version = "1.10", optional = true }
regex = "1.10"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_json_path = { version = "0.6", optional = true }
serde_with = "3.8"
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
strum = { version = "0.26", features = ["derive"] }
sxd-document = { version = "0.3", optional = true }
sxd-xpath = { version = "0.4", optional = true }
thiserror = "1.0"
tokio = { version = "1.37", features = ["process"] }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
url = { version = "2.5", features = ["serde"], optional = true }
urlencoding = { version = "2.1", optional = true }
which = "6.0"
windows = { version = "0.57", features = [
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(not(docsrs))'.dependencies]
git2 = "0.19"
reqwest = { version = "0.12", features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "stream",
] }

[target.'cfg(docsrs)'.dependencies]
git2 = { version = "0.19", default-features = false }
reqwest = { version = "0.12", default-features = false }

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.5.1", features = ["html_reports", "tokio"] }
rayon = "1.10"
tokio = { version = "1.37", features = ["macros", "process"] }

[build-dependencies]
heck = "0.5"
phf_codegen = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
